--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.417.0",
     "nanoid": "^5.0.7",
@@ -42,6 +43,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-share": "^5.1.0",
+    "react-slick": "^0.30.2",
     "stripe": "^16.6.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -57,6 +59,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-leaflet": "^3.0.0",
+    "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
